--- a/theme/css/chrome.css
+++ b/theme/css/chrome.css
@@ -92,7 +92,7 @@ a > .hljs {
 
 .menu-title {
     display: inline-block;
-    font-weight: 200;
+    font-weight: normal;
     font-size: 2.4rem;
     line-height: var(--menu-bar-height);
     text-align: center;
@@ -343,6 +343,7 @@ ul#searchresults span.teaser em {
     left: 0;
     right: 0;
     padding: 10px 10px;
+    padding-right: 0px;
 }
 .sidebar .sidebar-resize-handle {
     position: absolute;
@@ -389,6 +390,8 @@ ul#searchresults span.teaser em {
 .chapter li {
     display: flex;
     color: var(--sidebar-non-existant);
+    padding: 2px 4px;
+    padding-right: 0px;
 }
 .chapter li a {
     display: block;
@@ -425,7 +428,6 @@ ul#searchresults span.teaser em {
 
 .chapter li.chapter-item {
     line-height: 1.5em;
-    margin-top: 0.6em;
 }
 
 .chapter li.expanded > a.toggle div {
@@ -492,4 +494,8 @@ ul#searchresults span.teaser em {
 .theme-popup .theme:hover:last-child {
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
+}
+
+.active-highlight {
+    background-color: var(--sidebar-active-background);
 }
