--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -191,3 +191,19 @@ blockquote {
 li > p > img {
     margin-top: 5px;
 }
+
+.thumbnail { 
+    top:-50px; 
+    left:-35px; 
+    display:block; 
+    z-index:999; 
+    cursor: pointer; 
+    -webkit-transition-property: all; 
+    -webkit-transition-duration: 0.9s; 
+    -webkit-transition-timing-function: ease; 
+    } 
+    
+    /*change the number below to scale to the appropriate size*/ 
+    .thumbnail:hover { 
+    transform: scale(1.75); 
+    }
