--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -41,7 +41,8 @@ h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
 .hide-boring .boring { display: none; }
 .hidden { display: none !important; }
 
-h2, h3 { margin-top: 2.5em; }
+h1 { text-align: center; }
+h2, h3 { margin-top: 1em; text-align: center; }
 h4, h5 { margin-top: 2em; }
 
 .header + .header h3,
